# iot-trafficgen

./: .gitignore  Add duration to yamls.py  CITATION.cff  LICENSE.txt  README.md  pyproject.toml
docs/: Contributing.md  Installation.md  examples.md
profiles/: README.md
profiles/benign/: profile_01.yaml
profiles/bruteforce/: profile_01.yaml  profile_02.yaml  profile_03.yaml  profile_04.yaml  profile_05.yaml  profile_06.yaml
profiles/denial_of_service/: icmp_profile_01.yaml  icmp_profile_02.yaml  icmp_profile_03.yaml  icmp_profile_04.yaml  icmp_profile_05.yaml  icmp_profile_06.yaml  icmp_profile_07.yaml  mqtt_profile_01.yaml  mqtt_profile_02.yaml  mqtt_profile_03.yaml  mqtt_profile_04.yaml  syn_profile_01.yaml  syn_profile_02.yaml  syn_profile_03.yaml  syn_profile_04.yaml  syn_profile_05.yaml  syn_profile_06.yaml
profiles/dns_beacon/: profile_01.yaml
profiles/mitm/: profile_01.yaml
profiles/mqtt_inj/: profile_01.yaml  profile_02.yaml
profiles/nmap/: SYN_P1_1000_T3.yaml  profile_01.yaml  profile_02.yaml  profile_03.yaml  profile_04.yaml  profile_05.yaml  profile_06.yaml  profile_07.yaml  profile_08.yaml  profile_09.yaml  profile_10.yaml  profile_11.yaml  profile_12.yaml  profile_13.yaml  profile_14.yaml  profile_15.yaml  profile_16.yaml  profile_17.yaml  profile_18.yaml  profile_19.yaml  profile_20.yaml  profile_21.yaml  profile_22.yaml  profile_23.yaml  (+7 more)
scenarios/: NMAP_SYN_P1_1000_T3.yaml  README.md  example_scenario.yaml  nmap_recon.yaml  test.yaml
scripts/: README.md  dummy_attack.sh
tests/: test_cli_help.py
trafficgenvenv/: pyvenv.cfg
(+99 files in other folders)
