[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gicap-iottrafficgen"
version = "0.1.0"
description = "Reproducible IoT traffic generation framework for controlled laboratories."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "GICAP"}]
dependencies = []

[project.scripts]
iottrafficgen = "iottrafficgen.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]